--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <div class="container-fluid content py-3 ">
                 <div class="row align-items-center">
                     <img src="logo2.png" alt="logo" class="img-fluid logo col-1">
-                    <div class="col-3 d-flex align-items-center"><h1 class="my_bold">CyperWebb</h1></div>
-                    <div class="col-1"><h3 class="my_bold"><a class="link-dark" href="index.html">Početna</a></h2></div>
-                    <div class="col-1 offset-1"><h3 class="my_bold"><a class="link-dark" href="ponuda.html">Ponuda</a></h2></div>
-                    <div class="col-1 offset-1"><h3 class="my_bold"><a class="link-dark" href="#">Blog</a></h2></div>
-                    <div class="col-1"><h3 class="my_bold"><a class="link-dark" href="ponuda.html#kontakt">Kontakt</a></h2></div>
+                    <div class="col-lg-3 d-flex align-items-center"><h1 class="my_bold">CyperWebb</h1></div>
+                    <div class="col-md-1"><h3 class="my_bold"><a class="link-dark" href="index.html">Početna</a></h2></div>
+                    <div class="col-md-1 offset-1"><h3 class="my_bold"><a class="link-dark" href="ponuda.html">Ponuda</a></h2></div>
+                    <div class="col-md-1 offset-1"><h3 class="my_bold"><a class="link-dark" href="#">Blog</a></h2></div>
+                    <div class="col-md-1"><h3 class="my_bold"><a class="link-dark" href="ponuda.html#kontakt">Kontakt</a></h2></div>
                 </div>
                     
             </div>
@@ -44,11 +44,11 @@
             <div class="container-fluid border border-dark content py-3 ">
                 <div class="row align-items-center">
                     <img src="logobw1.png" alt="logo" class="img-fluid col-1">
-                    <div class="col-1"><p><a class="link-light" href="index.html">Početna</a></p></div>
-                    <div class="col-1"><p><a class="link-light" href="ponuda.html">Ponuda</a></p></div>
-                    <div class="col-1"><p><a class="link-light" href="#">Blog</a></p></div>
-                    <div class="col-1"><p><a class="link-light" href="ponuda.html#kontakt">Kontakt</a></p></div>
-                    <div class="col-2 ms-5 border border-dark" style="height: 70px">
+                    <div class="col-md-1"><p><a class="link-light" href="index.html">Početna</a></p></div>
+                    <div class="col-md-1"><p><a class="link-light" href="ponuda.html">Ponuda</a></p></div>
+                    <div class="col-md-1"><p><a class="link-light" href="#">Blog</a></p></div>
+                    <div class="col-md-1"><p><a class="link-light" href="ponuda.html#kontakt">Kontakt</a></p></div>
+                    <div class="col-md-2 ms-5 border border-dark" style="height: 70px">
                         <input style="width: 100%;height: 100%;"></input>
                     </div>
                     <div class="col-2 border border-dark" style="height: 70px">
