--- a/ponuda.html
+++ b/ponuda.html
@@ -33,7 +33,7 @@
                 <h3 class="my_bold"><a class="link-dark" href="#">Blog</a></h3>
               </li>
               <li class="nav-item mx-3">
-                <h3 class="my_bold"><a class="link-dark" href="ponuda.html#kontakt">Kontakt</a></h3>
+                <h3 class="my_bold"><a class="link-dark" href="#kontakt">Kontakt</a></h3>
               </li>
             </ul>
           </div>
@@ -292,7 +292,7 @@ Matični broj: 00123435
                     <div class="col-lg-1"><p><a class="link-light" href="index.html">Početna</a></p></div>
                     <div class="col-lg-1"><p><a class="link-light" href="ponuda.html">Ponuda</a></p></div>
                     <div class="col-lg-1"><p><a class="link-light" href="#">Blog</a></p></div>
-                    <div class="col-lg-1"><p><a class="link-light" href="ponuda.html#kontakt">Kontakt</a></p></div>
+                    <div class="col-lg-1"><p><a class="link-light" href="#kontakt">Kontakt</a></p></div>
 
                 </div>  
             </div>
