--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
-<body>
+<body class="dark">
     <nav class="navbar navbar-expand-lg light_blue">
         <div class="container-fluid">
           <img src="logo.png" alt="Logo" class="d-inline-block align-text-top me-2 logo">
